fix z-index problem add font and remove overlay styling

--- a/src/app/dialog-content/dialog-content.component.css
+++ b/src/app/dialog-content/dialog-content.component.css
@@ -58,14 +58,20 @@
     font-size: 150px;
 }
 
-@media only screen and (max-width:800px) {
+@media only screen and (max-width:1000px) {
     .row {
         flex-direction: column;
     }
     .dialogText {
-        font-size: medium;
+        font-size: large;
     }
     .veryBig {
         font-size: 100px;
+    }
+}
+
+@media only screen and (max-width:700px) {
+    .dialogText {
+        font-size: medium;
     }
 }
