--- a/src/app/maze-generator/maze-generator.component.css
+++ b/src/app/maze-generator/maze-generator.component.css
@@ -27,5 +27,4 @@ app-cell {
 .mat-raised-button {
     background-color: #00BCD4;
     color: white;
-    z-index: 1000;
 }
