--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 body {
     margin: 1px;
     padding: 0;
@@ -41,16 +53,6 @@ md-toolbar {
     }
 }
 
-.cdk-overlay-container {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-
 .mat-dialog-container {
     background-color: rgba(255, 255, 255, 0.9);
     overflow: hidden;
@@ -59,7 +61,7 @@ md-toolbar {
     text-align: center;
 }
 
-@media only screen and (max-width:800px) {
+@media only screen and (max-width:1200px) {
     .mat-dialog-container {
         width: 100vw!important;
         height: 90vh !important;
